# MinesweeperSolve

./: .gitignore  .gitmodules  README.md  auto_bot.py  main.py  minesweeper_calculator.py  pyproject.toml  terminal_ui.py  test_grid_slicer.py  vision_shape_ocr.py
minesweeper/: BusController.py  MathematicalSolver.py  Screenshot.py  TerminalPrint.py  __init__.py  __main__.py  bot.py  config.py  scanner.py
minesweeper/img2num/: __init__.py  collector.py  preprocessor.py  recognizer.py
minesweeper/solver/: __init__.py  calculator.py
minesweeper/ui/: __init__.py  terminal.py
minesweeper/vision/: __init__.py  capture.py  cnn_model.py  dataset_collector.py  preprocessor.py  recognizer.py
model/: README.md  minesweeper_calculator.py  minesweeper_meta.json  terminal_ui.py  vision_shape_ocr.py
src/app/: __init__.py
src/app/manager/: BusController.py  MathematicalSolver.py  MouseController.py  Screenshot.py  TerminalPrint.py  __init__.py
src/app/manager/img2num/: Collector.py  ConsistencyChecker.py  Recognizer.py  __init__.py  recognizer.py
src/cnn/: __init__.py
src/cnn/minesweeper_ocr/: __init__.py  dataset.py  predictor.py  trainer.py
src/cnn/test/: __init__.py  test.py
src/export/: __init__.py  model.py
